fixed layout issue with services font

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -263,7 +263,7 @@ light-purple #4026B6
   align-items: center;
   height: 50%;
   width: 100%;
-  padding: 1em;
+  padding: 0.75em;
   font-size: 1.15rem;
 }
 
